0.3.9:
- General updates:
--- Improved item matching, it no longer cares for case sensitivity while trying to find compendium entries.
- VTTES support updates:
--- Added support to parse out resistances.
--- Added support to parse out immunities.
--- Added support to parse out weaknesses.
--- Added support to parse out damage reduction.
--- Added support to parse out spell resistance.
--- Improved weapon damage type parsing.

0.3.8:
- Marked compatibility with FoundryVTT v0.6.6.

0.3.7:
- PAIZO Block updates:
--- Improved spell parsing by assigning them the correct preparation settings and activation cost.

0.3.6:
- General updates:
--- Improved item matching, it should now find batteries and frag grenades.
- PAIZO Block updates:
--- Fixed "P & C" damage type not parsed correctly.
--- Fixed ; getting parsed out of attack damage sections, confusing the damage type parsing.
--- Fixed speed special values not getting parsed properly.
--- Abilities being parsed may now pull from the class features and feats compendiums too.
--- Refactored usage of built-in Universal Creature Rules to SFRPG system Universal Creature Rules.
--- Tweaked item parsing logic to prevent duplicate item parsing.
--- Improved credstick parsing.
--- Spells now parse their casting times into the appropriate fields, except for spell-like abilities, and at will spells.
- VTTES support updates:
--- Fixing a parsing error when engagement_range was missing from attacks.
--- Fixing a parsing error when attacks didn't have damage_total specified. For example, smoke and stickybomb grenades.

0.3.5:
- VTTES support has been updated:
--- Added support for parsing bio into Biography.
--- GM Notes are now parsed into Biography as GM secret.
--- Skill notes are now parsed into the Biography as GM secret.
--- Tactics, environment, and organization are now parsed into the Biography as GM secret.
--- Added spell parsing.
--- Fixed a bug with language parsing ignoring ; as a splitting token.