@@ -1,5 +1,6 @@
 0.3.9:
 - General updates:
+--- Added "Parse Statblock" button to the right-click context menu of an actor folder. The parsed NPC will appear in this folder.
 --- Improved item matching, it no longer cares for case sensitivity while trying to find compendium entries.
 - VTTES support updates:
 --- Added support to parse out resistances.
